force-app/main/default/objects/TLG_Team__c/fields/TLG_Preferred_Status__c.field-meta.xml
<CustomField>
    <fullName>TLG_Preferred_Status__c</fullName>
    <label>Preferred Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Re-Assigned</fullName>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Price Request/Deal Reg</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Returned to AM</fullName>
            </value>
            <value>
                <fullName>Peer Review/Manager Approval</fullName>
            </value>
            <value>
                <fullName>Sent to AM/Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>SecureAssist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>